1. Add Portfolio Component 2. Add Animate Js for getting typewritter effect on portfolio 3. Add Views to portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 
   <!-- Theme JavaScript -->
   <script src="assets/js/creative.min.js"></script>
+  <script src="assets/js/typewritter.js"></script>
 </body>
 
 </html>
