--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>CoderagaFrontend</title>
-  <base href="/">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+	<meta name="description" content="Meta descriptions are HTML attributes that provide concise explanations of the contents of web pages. They should optimally be between 150-160 characters.">
+	<meta name="author" content="voidzero">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<!-- Touch icons for android and iOS (Bookmark icons) -->
+	<link rel="shortcut icon" sizes="192x192" href="../assets/images/icons/android-icon-192x192.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../assets/images/icons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../assets/images/icons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../assets/images/icons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../assets/images/icons/apple-icon-152x152.png">
+
+	<!-- Schema.org markup for Google+ and facebook -->
+	<meta property="og:title" content="Coderaga">
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://coderaga.com"/>
+	<meta property="og:image" content="Use images that are at least 1200 x 630 pixels for the best display on high resolution devices">
+	<meta property="og:description" content="Hello, this is Kartik. I create simple and elegant websites. I challenge myself to grow and get better at my work everyday. I have been doing this for the past 3 years in the field of web development.">
+
+	<!-- Schema.org markup for twitter cards(summary_large_image) -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@coderaga">
+	<meta name="twitter:title" content="Coderaga">
+	<meta name="twitter:description" content="Listen to music of code">
+	<!-- <meta name="twitter:image" content="URL to a unique image representing the content of the page. Do not use a generic image such as your website logo, author photo, or other image that spans multiple pages. Images for this Card should be at least 280px in width, and at least 150px in height. Image must be less than 1MB in size."> -->
+
+	<title>Coderaga</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
+	<link rel="stylesheet" href="../assets/css/main.css">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
-<body>
-  <app-root></app-root>
+<body id="minimos-1">
+  <div class="preloader abs-center">
+      <div class="spinner"></div>
+    </div>
+    
+    <div class="content-wrapper">
+      <div class="v-center">
+        <div class="main-content">
+          <p>Hello, this is Kartik. I create simple and elegant websites. I challenge myself to grow and get better at my work everyday. I have been doing this for the past 3 years in the field of web development.</p>
+          <ul>
+            <li><a href="http://twitter.com/kartikjagdale11">Twitter</a></li>
+            <li><a href="http://facebook.com/kartikjagdale">Facebook</a></li>
+            <li><a href="https://medium.com/coderaga">Medium</a></li>
+            <li><a href="https://stackoverflow.com/users/3808898/voidzero">Stack Overflow</a></li>
+            <li><a href="https://github.com/kartikjagdale">Github</a></li>
+            <li><a href="mailto:kartikjagdale11@gmail.com">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- =================================================================
+    COMPILED JS PLUGINS
+    ================================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+    <script src="../assets/js/dependencies.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
